# liblurk-rs_server_example

./: Cargo.toml
data/: constants.ron
data/entities/: spider.ron
data/locations/: castathar_east_district.ron  castathar_north_district.ron  castathar_sewers_south.ron  castathar_south_district.ron
src/: combat.rs  entity.rs  main.rs  map.rs  monster_spawn.rs  rest.rs  server.rs
src/game/: mod.rs  types.rs
src/game/actor/: mod.rs  stat.rs
src/game/actor/components/: behaviour.rs  client.rs  combat.rs  gold.rs  health.rs  id.rs  kind.rs  located.rs  mod.rs  name.rs  regeneration.rs  stat_shop.rs
src/game/actor/systems/: mod.rs  regeneration_system.rs
src/game/components/: entity.rs  location.rs  mod.rs  purchase.rs
src/game/load/: constants_loader.rs  entity_loader.rs  location_loader.rs  mod.rs
src/game/location/components/: adjacencies.rs  mod.rs  (+4 more)
src/game/resources/: change_room_events.rs  character_creation.rs  character_prep.rs  delta_time.rs  events.rs  feedback.rs  fight_events.rs  global_name_registry.rs  id_entity_mapping.rs  id_name_mapping.rs  identification.rs  logout_events.rs  loot_events.rs  message_events.rs  mod.rs  move_task.rs  number_entity_mapping.rs  pvp_fight_events.rs  start_location.rs  start_registry.rs
src/game/systems/: change_room_response_system.rs  change_room_system.rs  character_crier_system.rs  character_response_system.rs  connect_response_system.rs  loot_system.rs  message_response_system.rs  mod.rs  move_system.rs  player_fight_system.rs  purchases.rs  regeneration.rs  render_system.rs  start_response_system.rs
