[package]
name = "liblurk-rs_server_example"
version = "0.1.0"
authors = ["AustinHaugerud <austin15328@hotmail.com>"]

[dependencies]
liblurk = { git = "https://github.com/AustinHaugerud/liblurk-rs.git", branch = "refactor" }
uuid = "0.6"
rand = "*"
specs = "*"
specs-derive = "*"
clap = "*"
serde = { version = "1", features = ["serde_derive"] }
ron = "0.5.1"
sled = "*"
